Fix jumping

--- a/client/main.css
+++ b/client/main.css
@@ -149,8 +149,9 @@ ul.scene-options {
 
 ul.scene-options li {
     display: inline-block;
-    border: 2px solid #00FF00;
-    padding: 10px;
+    /*border: 2px solid #00FF00;*/
+    padding-right: 5px;
+    padding-bottom: 5px;
 }
 
 ul.scene-options li a,
